syntax = "proto3";

package task;

service TaskService {
    rpc Create(Task) returns (Task);
    rpc GetTask(Task) returns (Task);
    rpc Update(Task) returns (Task);
    rpc Delete(Task) returns (Mess);
    rpc ListOverdue(Mess) returns(ListTask);
}

message Task{
    int64 id = 1;
    string assignee = 2;
    string deadline = 3;
    string status = 4;
    string created_at = 5;
    string updated_at = 6;
    string deleted_at = 7;
}

message Mess{
    string message = 1;
}

message ListTask{
    repeated Task task = 1;
    int64 all = 2;
}